examples/test/testpolicy7111.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7111
  namespace: namespace250
spec:
  podSelector:
    matchLabels:
      key34: value15
      key22: value15
      key30: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value47
      podSelector:
        matchLabels:
          key30: value9
